syntax = "proto2";
package etop.vn.api.main.shipping.v1;
option go_package = "v1";

import "protoc-gen-swagger/options/annotations.proto";
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "Shipping";
        version:"v1";
    };
};

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_sizecache_all)    = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "etop.vn/api/main/shipping/v1/types/types.proto";
import "etop.vn/api/main/ordering/v1/types/types.proto";

message Fulfillment {
    optional int64 id = 1 [(gogoproto.nullable)=false];

    optional int64 order_id = 2 [(gogoproto.nullable)=false];

    optional int64 shop_id = 3 [(gogoproto.nullable)=false];

    optional int64 supplier_id = 4 [(gogoproto.nullable)=false];

    optional int64 partner_id = 5 [(gogoproto.nullable)=false];

    optional ordering.v1.types.ItemLine lines = 6 [(gogoproto.nullable)=false];
}
